--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 button {
-    margin: 10px;
-    padding: 10px 20px;
+    margin: 5px;
+    padding: 10px 10px;
     font-size: 18px;
     cursor: pointer;
     background-color: #4CAF50;
@@ -22,8 +22,25 @@ button {
     border-radius: 5px;
 }
 
+.particleButton {
+    width: 120px; /* Fixed width */
+    height: 50px; /* Fixed height to prevent resizing */
+}
+
 button:hover {
     background-color: #45a049;
+}
+
+#canvasButtonsContainer {
+    display: flex;
+    align-items: flex-start; /* Aligns items at the top */
+    justify-content: center;
+    gap: 5px;
+}
+
+#particleSelector {
+    display: flex;
+    flex-direction: column; /* Stacks buttons vertically */
 }
 
 /* Falling Droplet Style */
