added wood and increased size by 50%

--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ button:hover {
     display: flex;
     flex-direction: column; /* Stacks buttons vertically */
 }
+#particleSelector2 {
+    display: flex;
+    flex-direction: column; /* Stacks buttons vertically */
+}
 
 /* Falling Droplet Style */
 .droplet {
